<resources>
    <string name="app_name">LessonXML</string>
    <string name="e31din">\@e31din</string>
    <string name="name">Артём Шатохин</string>
    <string name="online">online</string>
    <string name="account">Account</string>
    <string name="phone">+7 (910) 450-90-03</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="username">Username</string>
    <string name="Descriptions_bio">Солнце не ждет тепла - оно светит и...</string>
    <string name="bio">Bio</string>
    <string name="settings">Settings</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="devices">Devices</string>
    <string name="start_time">0:00</string>
    <string name="duration_time">5:27</string>
    <string name="name_artist">R.Armando Morabito</string>
    <string name="name_music">Angel (feat. Julie Elven)</string>
    <string name="name_play_list">Музыка для секса ....</string>
    <string name="play_now">Сейчас играет</string>
</resources>