<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shatokhin.lessonXML.TelegramOtherLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/background_header"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="10dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:rowCount="1">

                <ImageButton
                    android:id="@+id/btnNavBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_columnWeight="2"
                    android:layout_gravity="start"
                    android:background="@drawable/ic_nav_back"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/btnNavQRcode"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_nav_qrcode"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/btnNavSearch"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_nav_search"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

                <ImageButton
                    android:id="@+id/btnNavMenu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_nav_menu"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imgAvatarCV"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/avatar" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvStatusOnline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/online"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnAddPhoto"
            android:layout_gravity="end"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/roundedaddphoto"
            android:scaleType="center"
            android:src="@drawable/ic_add_photo"
            tools:ignore="SpeakableTextPresentCheck" />

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="-30dp"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account"
            android:textColor="@color/text_category"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="@dimen/account_block_text_size"
            app:layout_constraintStart_toStartOf="@id/tvAccount"
            app:layout_constraintTop_toBottomOf="@id/tvAccount" />
        <TextView
            android:id="@+id/tvHintPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tap_to_change_phone_number"
            android:textSize="@dimen/account_block_hint_size" />
        <ImageView
            android:id="@+id/separatorHintPhone_UserName"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#DDDDDD" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/e31din"
            android:textColor="@color/black"
            android:textSize="@dimen/account_block_text_size"
            app:layout_constraintStart_toStartOf="@+id/separatorHintPhone_UserName"
            app:layout_constraintTop_toBottomOf="@id/separatorHintPhone_UserName" />

        <TextView
            android:id="@+id/tvHintUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textSize="@dimen/account_block_hint_size"
            app:layout_constraintStart_toStartOf="@+id/tvUsername"
            app:layout_constraintTop_toBottomOf="@id/tvUsername" />

        <ImageView
            android:id="@+id/separatorUserName_Bio"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#DDDDDD"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Descriptions_bio"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvHintBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bio"
            android:textSize="@dimen/account_block_hint_size" />

    </LinearLayout>

    <ImageView
        android:id="@+id/separatorCategory"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:background="#DDDDDD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/settings"
            android:textColor="@color/text_category"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_notifications"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_menu_notifications"
            android:text="@string/notifications_and_sounds"
            android:textAlignment="textStart"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_security"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_security"
            android:text="@string/privacy_and_security"
            android:textAlignment="textStart"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/separatorSecurity_Data"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:background="#DDDDDD"/>
        <Button
            android:id="@+id/btn_data"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_data"
            android:text="@string/data_and_storage"
            android:textAlignment="textStart"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_chat_settings"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_chat_settings"
            android:text="@string/chat_settings"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:background="#DDDDDD"/>

        <Button
            android:id="@+id/btn_chat_folder"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_folder"
            android:text="@string/chat_folders"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator" />

        <Button
            android:id="@+id/btn_chat_devices"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_devices"
            android:text="@string/devices"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_chat_folder" />

    </LinearLayout>

</LinearLayout>