<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shatokhin.lessonXML.TelegramConstraintLayout">

    <ImageView
        android:id="@+id/imgBackgroundNavigation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background_header"
        android:clickable="false"
        android:contextClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnNavMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_nav_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="@dimen/btn_navigation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="@dimen/btn_navigation"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnNavSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_nav_search"
        app:layout_constraintBottom_toBottomOf="@+id/btnNavMenu"
        app:layout_constraintEnd_toStartOf="@+id/btnNavMenu"
        app:layout_constraintHeight="@dimen/btn_navigation"
        app:layout_constraintTop_toTopOf="@+id/btnNavMenu"
        app:layout_constraintWidth="@dimen/btn_navigation"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnNavQRcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_nav_qrcode"
        app:layout_constraintBottom_toBottomOf="@+id/btnNavSearch"
        app:layout_constraintEnd_toStartOf="@+id/btnNavSearch"
        app:layout_constraintHeight="@dimen/btn_navigation"
        app:layout_constraintTop_toTopOf="@+id/btnNavSearch"
        app:layout_constraintWidth="@dimen/btn_navigation"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnNavBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_nav_back"
        app:layout_constraintBottom_toBottomOf="@+id/btnNavMenu"
        app:layout_constraintHeight="@dimen/btn_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNavMenu"
        app:layout_constraintWidth="@dimen/btn_navigation"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imgAvatarCV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBackgroundNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNavBack">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/avatar" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tvStatusOnline"
        app:layout_constraintStart_toEndOf="@id/imgAvatarCV"
        app:layout_constraintTop_toTopOf="@id/imgAvatarCV" />

    <TextView
        android:id="@+id/tvStatusOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/online"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/imgAvatarCV"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <ImageButton
        android:id="@+id/btnAddPhoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/roundedaddphoto"
        android:scaleType="center"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBackgroundNavigation"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        android:textColor="@color/text_category"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBackgroundNavigation" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="@dimen/account_block_text_size"
        app:layout_constraintStart_toStartOf="@id/tvAccount"
        app:layout_constraintTop_toBottomOf="@id/tvAccount" />

    <TextView
        android:id="@+id/tvHintPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tap_to_change_phone_number"
        android:textSize="@dimen/account_block_hint_size"
        app:layout_constraintStart_toStartOf="@id/tvPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <ImageView
        android:id="@+id/separatorHintPhone_UserName"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvHintPhone"
        app:layout_constraintTop_toBottomOf="@id/tvHintPhone" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/e31din"
        android:textColor="@color/black"
        android:textSize="@dimen/account_block_text_size"
        app:layout_constraintStart_toStartOf="@+id/separatorHintPhone_UserName"
        app:layout_constraintTop_toBottomOf="@id/separatorHintPhone_UserName" />

    <TextView
        android:id="@+id/tvHintUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/username"
        android:textSize="@dimen/account_block_hint_size"
        app:layout_constraintStart_toStartOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@id/tvUsername" />

    <ImageView
        android:id="@+id/separatorUserName_Bio"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvHintUsername"
        app:layout_constraintTop_toBottomOf="@id/tvHintUsername" />


    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Descriptions_bio"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/separatorUserName_Bio"
        app:layout_constraintTop_toBottomOf="@id/separatorUserName_Bio" />

    <TextView
        android:id="@+id/tvHintBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bio"
        android:textSize="@dimen/account_block_hint_size"
        app:layout_constraintStart_toStartOf="@+id/tvBio"
        app:layout_constraintTop_toBottomOf="@id/tvBio" />

    <ImageView
        android:id="@+id/separatorCategory"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHintBio" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/settings"
        android:textColor="@color/text_category"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorCategory" />

    <Button
        android:id="@+id/btn_notifications"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_menu_notifications"
        android:text="@string/notifications_and_sounds"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings" />

    <Button
        android:id="@+id/btn_security"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_security"
        android:text="@string/privacy_and_security"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_notifications" />

    <ImageView
        android:id="@+id/separatorSecurity_Data"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_security"
        app:layout_constraintTop_toBottomOf="@id/btn_security" />

    <Button
        android:id="@+id/btn_data"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_data"
        android:text="@string/data_and_storage"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorSecurity_Data" />

    <Button
        android:id="@+id/btn_chat_settings"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_chat_settings"
        android:text="@string/chat_settings"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_data"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btn_chat_settings"
        app:layout_constraintTop_toBottomOf="@id/btn_chat_settings" />

    <Button
        android:id="@+id/btn_chat_folder"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_folder"
        android:text="@string/chat_folders"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <Button
        android:id="@+id/btn_chat_devices"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_menu_devices"
        android:text="@string/devices"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_chat_folder" />

</androidx.constraintlayout.widget.ConstraintLayout>